actualizacion actividades semana 13

--- a/_data/cursada_actual/13.yml
+++ b/_data/cursada_actual/13.yml
@@ -1,20 +1,22 @@
 descripcion: |
-  **Semana de Parcial**
+  **Información Importante sobre los Parciales**
   
-  **Comisión 2 (Martes de 18 a 22)**: El parcial será **PRESENCIAL** el día **Martes 1 de Noviembre** en el Laboratorio 4 de edificio Malvinas Argentinas. El horario será de 18 a 22hs.
+  **Comisión 2 (Martes de 18 a 22)**:  **Parcial PRESENCIAL** el día **Martes 1 de Noviembre** en el Laboratorio 4 de edificio Malvinas Argentinas. El horario será de 18 a 22hs.
   Los que puedan y deseen traer sus notebooks para poder trabajar en ellas pueden hacerlo; consideren traer también adaptador de red, cable ethernet, y los accesorios que requieran para conectarse, teniendo en cuenta que no habrá red Wifi disponible. 
   La modalidad será **INDIVIDUAL** y **ABIERTO**, lo que significa que podrán utilizar todos los apuntes que tengan tanto físicos como digitales. 
   Tendrá una duración máxima de 4 horas y consistirá en resolver un ejercicio similar a los que trabajamos en las últimas clases, siendo la única forma de entrega la realización del push a un repositorio de github que será provisto por el docente en el momento de la clase.
 
 
-  **Comisión 1 (Jueves de 14 a 18)**: **A CONFIRMAR**. Estén atentos al canal de Discord para más información.
+  **Comisión 1 (Jueves de 14 a 18)**: El parcial será **PRESENCIAL** el día **Jueves 10 de Noviembre** en el Laboratorio 4 de edificio Malvinas Argentinas.
+
 
   
-  
+   **Actividades de la Semana 13:**
  
 
 conferencia:
-  horario0: PRESENCIAL - Martes 1 de Noviembre, a partir de las 18hs. en Laboratorio 4 de edificio Malvinas Argentinas. Prof. Gerardo Gonzalez Tulian y Hernán Coniglio
+  horario0: Parcial PRESENCIAL - Martes 1 de Noviembre, a partir de las 18hs. en Laboratorio 4 de edificio Malvinas Argentinas. Prof. Gerardo Gonzalez Tulian y Hernán Coniglio
 
-  horario1: A CONFIRMAR
+  horario1: Clase VIRTUAL - Jueves 3 de Noviembre, 14hs. Prof. Lucas Spigariol
+  url1: https://utn.zoom.us/j/88137014356?pwd=WkhFTEFTZXBDWUkxaDFRTVhkWTR3QT09
 
