--- a/_data/cursada_2022s2/01.yml
+++ b/_data/cursada_2022s2/01.yml
@@ -1,6 +1,6 @@
 descripcion: |
   Comenzaremos trabajando con las guías de **Mumuki** pero antes vas a tener que hacer lo siguiente:
-    * Registrarte al aula ingresando en [Mumuki-UnaHur-Obj1](https://mumuki.io/unahur-obj1/join/MAAhaw). Podés registrarte con tu cuenta de Google o crearte una nueva dentro de Mumuki con un mail y contraseña que debes recordar para volver a ingresar. 
+    * Registrarte al aula ingresando en [Mumuki-UnaHur-Obj1](https://mumuki.io/unahur-obj1/join/bV2-Fg). Podés registrarte con tu cuenta de Google  o crearte una nueva dentro de Mumuki con un mail y contraseña que debes recordar para volver a ingresar. 
     * **Importante:** Luego para ingresar siempre directamente al curso podes entrar por el link que hay en la esquina superior derecha de página que dice [Mumuki](https://mumuki.io/login?organization=unahur-obj1&origin=%2Funahur-obj1)
 
 videos:
@@ -16,15 +16,13 @@ videos:
     
 
 conferencia:
-  horario1: Presencial - Lunes 27 de Marzo, a parir de las 08.00hs. - Laboratorio 4 en 1er piso edificio Malvinas Argentinas (Origone 101) - Lucas Spigariol 
-  
-  horario0: Presencial - Martes 28 de Marzo, a partir de las 18.00hs. - Laboratorio 4 en 1er piso edificio Malvinas Argentinas (Origone 101) - Profesor Gerardo Gonzalez Tulian 
+  horario0: Presencial - Martes 9 de Agosto, a partir de las 18.00hs. - Laboratorio 4 en 1er piso edificio Malvinas Argentinas (Origone 101) - Profesor Gerardo Gonzalez Tulian 
 
-  
+  horario1: Presencial - Jueves 11 de Agosto, a parir de las 14.00hs. - Laboratorio 4 en 1er piso edificio Malvinas Argentinas (Origone 101) - Lucas Spigariol 
  
 
 entrega:
-  fecha: 2023-04-02T23:59
+  fecha: 2022-08-16T18:00
   mumuki:
     - nombre: Multipepita la golondrina
       url: https://mumuki.io/unahur-obj1/lessons/731-objetos-y-mensajes-acompanamiento-multipepita-etapa-1
