--- a/_data/cursada_actual/01.yml
+++ b/_data/cursada_actual/01.yml
@@ -16,9 +16,13 @@ videos:
     
 
 conferencia:
-  horario1: Presencial - Lunes 27 de Marzo, a parir de las 08.00hs. - Laboratorio 3 en 1er piso edificio Malvinas Argentinas (Origone 101) - Lucas Spigariol 
+  horario1: <br>
+            - Lunes 27 de Marzo -> **PRESENCIAL** a parir de las 08.00hs. - Laboratorio 3 en 1er piso edificio Malvinas Argentinas (Origone 101) - Lucas Spigariol <br>
+            - Jueves 30 de Marzo -> **VIRTUAL** a parir de las 08.00hs. - Link -> **A CONFIRMAR**
   
-  horario0: Presencial - Martes 28 de Marzo, a partir de las 18.00hs. - Laboratorio 3 en 1er piso edificio Malvinas Argentinas (Origone 101) - Profesor Gerardo Gonzalez Tulian 
+  horario0: <br>
+            - Martes 28 de Marzo -> **PRESENCIAL** a partir de las 18.00hs. - Laboratorio 3 en 1er piso edificio Malvinas Argentinas (Origone 101) - Profesor Gerardo Gonzalez Tulian <br>
+            - Jueves 30 de Marzo -> **VIRTUAL** a parir de las 18.00hs. - Link -> [**Link JueTNoc**](https://meet.google.com/rqd-oxgm-wtr)
 
   
  
