publicacion semana 2 correccion comision lunes

--- a/_data/cursada_actual/02.yml
+++ b/_data/cursada_actual/02.yml
@@ -26,7 +26,7 @@ videos:
 conferencia: 
 
   horario1: <br>
-            - (***Lunes 3 de Abril***) -> **Clase VIRTUAL** a parir de las 08.00hs. - Link -> [**Link**](https://meet.google.com/jkq-pvcy-nfh) <br>
+            - (***Lunes 3 de Abril***) -> **PRESENCIAL** a parir de las 08.00hs. - Laboratorio 3 en 1er piso edificio Malvinas Argentinas (Origone 101) - Lucas Spigariol <br>
             - (***Jueves 6 de Abril***) -> **FERIADO NO HAY CLASES**
   
   horario0: <br>
