corrección link ejercicio de classroom de semana 2

--- a/_data/cursada_actual/02.yml
+++ b/_data/cursada_actual/02.yml
@@ -59,6 +59,6 @@ mumuki:
 
 ejercicios:
   - name: Enunciado Gustos
-    classroom: https://classroom.github.com/a/jDIyYDEe
+    classroom: https://classroom.github.com/a/3banxSVH
     comentarios:
       - name: Es el mismo ejercicio de Gustos de Mumuki. Quienes ya tengan instalado y funcionando el IDE de Wollok pueden intentar clonarlo y resolverlo desde ahí. 
