agregados videos semana 2 y contenidos semana 3

--- a/_data/cursada_actual/02.yml
+++ b/_data/cursada_actual/02.yml
@@ -21,6 +21,10 @@ videos:
     url: https://youtu.be/_JSncjztLAY
   - nombre: Ejercicio "Gustos" - comentarios para encararlo
     url: https://youtu.be/dRy92EB4ppM
+  - nombre: Video clase virtual martes 4/4 Turno Noche (Parte 1)
+    url: https://youtu.be/cCfn4mRzmlY
+  - nombre: Video clase virtual martes 4/4 Turno Noche (Parte 2)
+    url: https://youtu.be/vVrGN1nH1MM
 
 
 conferencia: 
