resaltado nuevo video semana 3

--- a/_data/cursada_actual/03.yml
+++ b/_data/cursada_actual/03.yml
@@ -16,7 +16,7 @@ videos:
     url: https://youtu.be/7QRWdouBcsY
   - nombre: Introducción a los tests automáticos
     url: https://youtu.be/1BNEa7ma5cA
-  - nombre: Video clase virtual del jueves 13/4 Turno Noche
+  - nombre: Video clase virtual del jueves 13/4 Turno Noche **(Nuevo)**
     url: https://youtu.be/UJI8ZJ9RJOA
 
 
