agregado video clase virtual martes 18-4 turno noche

--- a/_data/cursada_actual/04.yml
+++ b/_data/cursada_actual/04.yml
@@ -21,7 +21,8 @@ videos:
     url: https://youtu.be/Kalojrle0kk
   - nombre: Empanadas Giménez parte 2 - que hace cada empleado cuando cobra, uso de self
     url: https://youtu.be/3dWYlQw6TXA
-
+  - nombre: Video clase virtual del martes 18/4 Turno Noche **(Nuevo)**
+    url: https://youtu.be/w17evx-HroM
 
 conferencia:
   horario1: <br>
