agregado video clase virtual jueves 27-4 y semana 6

--- a/_data/cursada_actual/05.yml
+++ b/_data/cursada_actual/05.yml
@@ -30,8 +30,8 @@ videos:
     url: https://youtu.be/sYLPxKc_QmA
   - nombre: Golosinas - más métodos usando listas
     url: https://youtu.be/kiQS1hRiowY
-  - nombre: Grabación de la clase virtual del sábado 10 de Septiembre
-    url: https://youtu.be/lGHzAn7t4iI
+  - nombre: Grabación de la clase virtual del jueves 27 de Abril **(Nuevo)**
+    url: https://youtu.be/0tNIaF001d8
 
 
 conferencia:
