agregado video clase virtual martes 2-5 comision 1

--- a/_data/cursada_actual/05.yml
+++ b/_data/cursada_actual/05.yml
@@ -30,7 +30,7 @@ videos:
     url: https://youtu.be/sYLPxKc_QmA
   - nombre: Golosinas - más métodos usando listas
     url: https://youtu.be/kiQS1hRiowY
-  - nombre: Grabación de la clase virtual del jueves 27 de Abril **(Nuevo)**
+  - nombre: Grabación de la clase virtual del jueves 27 de Abril
     url: https://youtu.be/0tNIaF001d8
 
 
