--- a/_data/cursada_actual/06.yml
+++ b/_data/cursada_actual/06.yml
@@ -18,7 +18,7 @@ videos:
     url: https://youtu.be/okf2VCfjvx4
   - nombre: Pensar en los tipos para elegir qué operación me resuelve un recorrido.
     url: https://youtu.be/cLfp2T_LSjg
-  - nombre: Grabación de la clase virtual del martes 2 de Mayo Comisión 1 **(Nuevo)**
+  - nombre: Grabación de la clase virtual del martes 2 de Mayo Comisión 1
     url: https://youtu.be/3Nw_I1UMpBc
 
 
