agregado video clase practica 11-5-23 y contenido semana 8

--- a/_data/cursada_actual/07.yml
+++ b/_data/cursada_actual/07.yml
@@ -20,6 +20,8 @@ videos:
     url: https://youtu.be/0pggtvrIXYY
   - nombre: clases - cómo es el self ahora que tenemos clases
     url: https://youtu.be/I6bOjRAr3Wo
+  - nombre: Video de la clase práctica del jueves 11/5/23 T.Noche **(Nuevo)**
+    url: https://youtu.be/odBiI89GenE
 
 
 conferencia:
