publicacion contenido semana 9

--- a/_data/cursada_actual/08.yml
+++ b/_data/cursada_actual/08.yml
@@ -21,7 +21,7 @@ videos:
     url: https://youtu.be/c27MMRweTZM
   - nombre: expresión ternaria - un lindo truquito para escribir un poco menos, y entender un poco más
     url: https://youtu.be/1XdYc-91Vtg
-  - nombre: Grabación de la clase virtual del martes 16 de Mayo Comisión 1 (****Nuevo****)
+  - nombre: Grabación de la clase virtual del martes 16 de Mayo Comisión 1
     url: https://youtu.be/eTszwSxZOps
 
 
