agregado video clase virtual 30-5-23

--- a/_data/cursada_actual/10.yml
+++ b/_data/cursada_actual/10.yml
@@ -17,7 +17,8 @@ videos:
     url: https://youtu.be/fFf9Kxu9PWs
   - nombre: Herencia - Naves Espaciales Parte IV
     url: https://youtu.be/FDhPs8Gqsz8
-
+  - nombre: Grabación de la clase virtual del martes 30 de Mayo Comisión 1 **(Nuevo)**
+    url: https://youtu.be/xp8YyyIAIMk
   
 
 conferencia:
