--- a/_data/cursada_actual/12.yml
+++ b/_data/cursada_actual/12.yml
@@ -2,7 +2,7 @@ descripcion: |
   Esta semana vamos practicar para el parcial que será el jueves 22/6 y responderemos consultas sobre el trabajo práctico. Aprovechen el canal de Discord para consultas y dudas.
 
 videos:
-  - nombre: Grabación de la clase virtual del martes 13 de Junio Comisión 1 ****(Nuevo)****
+  - nombre: Grabación de la clase virtual del martes 13 de Junio Comisión 1 
     url: https://youtu.be/NPA9IcsW3_8
  
 conferencia:
