correccion actividad comision 2

--- a/_data/cursada_actual/15.yml
+++ b/_data/cursada_actual/15.yml
@@ -3,7 +3,7 @@ descripcion: |
 
   ### Comisión 2 (Lunes y Jueves de 8 a 12)
   
-    Semana de Actividades Prácticas y **Exposición de TP Game Grupal PRESENCIAL**
+    Semana de Actividades Prácticas y revisión de avances del TP Game Grupal.
   
 
 
