actualización clase virtual turno mañana 6 de julio

--- a/_data/cursada_actual/15.yml
+++ b/_data/cursada_actual/15.yml
@@ -22,7 +22,7 @@ descripcion: |
 conferencia:
   horario1: <br>
             - (***Lunes 3 de Julio***) -> **PRESENCIAL** a parir de las 08.00hs. - Laboratorio 3 en 1er piso edificio Malvinas Argentinas (Origone 101) - Lucas Spigariol <br>
-            - (***Jueves 6 de Julio***) -> **PRESENCIAL** a parir de las 08.00hs. - Laboratorio 3 en 1er piso edificio Malvinas Argentinas (Origone 101) - Lucas Spigariol <br>
+            - (***Jueves 6 de Julio***) -> **Clase VIRTUAL** a parir de las 08.00hs. - Link -> [**Link**](https://meet.google.com/jkq-pvcy-nfh) <br>
   
   horario0: <br>
             - (***Martes 4 de Julio***) -> **PRESENCIAL** a parir de las 18.00hs. - Laboratorio 3 en 1er piso edificio Malvinas Argentinas (Origone 101) - Gerardo Gonzalez Tulian <br>
