actualización actividades turno mañana semana 16

--- a/_data/cursada_actual/16.yml
+++ b/_data/cursada_actual/16.yml
@@ -4,19 +4,23 @@ descripcion: |
   ### Comisión 2 (Lunes y Jueves de 8 a 12)
   
     Lunes 10/7 Recuperatorio Parcial y revisión de TP Game **PRESENCIAL**
+
+    Jueves 13/7 Clase especial lenguajes y cierre de la materia **PRESENCIAL**.
   
 
 
   ### Comisión 1 (Martes y Jueves de 18 a 22)
 
     Martes 11/7 clase especial Lenguajes y cierre de la materia **VIRTUAL**
+    
+    Jueves 13/7 LIBRE (SIN ACTIVIDAD)
   
 
     
 conferencia:
   horario1: <br>
             - (***Lunes 10 de Julio***) -> **PRESENCIAL** a parir de las 08.00hs. - Laboratorio 3 en 1er piso edificio Malvinas Argentinas (Origone 101) - Lucas Spigariol <br>
-            - (***Jueves 13 de Julio***) -> **SIN ACTIVIDAD** <br>
+            - (***Jueves 13 de Julio***) -> **PRESENCIAL** a parir de las 08.00hs. - Laboratorio 3 en 1er piso edificio Malvinas Argentinas (Origone 101) - Lucas Spigariol <br>
   
   horario0: <br>
             - (***Martes 11 de Julio***) -> **Clase VIRTUAL** a parir de las 18.15hs. - Link -> [**Link**](https://meet.google.com/jkq-pvcy-nfh) <br> <br>
