agregado video clase virtual 11-7

--- a/_data/cursada_actual/16.yml
+++ b/_data/cursada_actual/16.yml
@@ -15,6 +15,9 @@ descripcion: |
     
     Jueves 13/7 LIBRE (SIN ACTIVIDAD)
   
+videos:
+- nombre: Grabación de la clase virtual del martes 11 de Julio Comisión 1 (Turno noche) (Especial Lenguajes)
+  url: https://youtu.be/WZHGgVF_Jeg
 
     
 conferencia:
@@ -25,3 +28,10 @@ conferencia:
   horario0: <br>
             - (***Martes 11 de Julio***) -> **Clase VIRTUAL** a parir de las 18.15hs. - Link -> [**Link**](https://meet.google.com/jkq-pvcy-nfh) <br> <br>
             - (***Jueves 13 de Julio***) -> **SIN ACTIVIDAD** <br>
+
+    <br>
+    _**Y lo último!**_<br>
+
+    Les pedimos si nos ayudan contestando una encuesta sobre esta cursada, les dejamos el link a la misma. Esto nos ayudará a ir mejorando cada día más. Gracias!! <br>
+
+    [_**Link a la encuesta**_](https://forms.gle/wzGjUzqNyLKsh2Rv8)
