corrección asignación Presentacion personal

--- a/_data/cursada_actual/01.yml
+++ b/_data/cursada_actual/01.yml
@@ -41,7 +41,7 @@ entrega:
 
   ejercicios:
     - name: GIT - Presentación Personal
-      classroom: https://classroom.github.com/a/H6OcuMyg
+      classroom: https://classroom.github.com/a/9BSamoWd
       comentarios: 
         - name: Entregar realizando un push al reposotorio inidividual del Class-room
 
