cambios a condiciones de cursada y links

--- a/_data/cursada_actual/01.yml
+++ b/_data/cursada_actual/01.yml
@@ -1,6 +1,6 @@
 descripcion: |
   Comenzaremos trabajando con las guías de **Mumuki** pero antes vas a tener que hacer lo siguiente:
-    * Registrarte al aula ingresando en [Mumuki-UnaHur-Obj1](https://mumuki.io/unahur-obj1/join/MAAhaw). Podés registrarte con tu cuenta de Google o crearte una nueva dentro de Mumuki con un mail y contraseña que debes recordar para volver a ingresar. 
+    * Registrarte al aula ingresando en [Mumuki-UnaHur-Obj1](https://mumuki.io/unahur-obj1/join/mRpjWQ). Podés registrarte con tu cuenta de Google o crearte una nueva dentro de Mumuki con un mail y contraseña que debes recordar para volver a ingresar. 
     * **Importante:** Luego para ingresar siempre directamente al curso podes entrar por el link que hay en la esquina superior derecha de página que dice [Mumuki](https://mumuki.io/login?organization=unahur-obj1&origin=%2Funahur-obj1)
   
   Durante esta semana, también vamos a comenzar a trabajar con **GIT**. Para eso, vas a tener que clonarte el repositorio aceptando la asignación que figura más abajo como **GIT - Presentación Personal**. Si aún no estás registrado en github, en el momento que intentes aceptar la asignación se te indicará como resistrarte. Es muy importante que tomes nota del usuario con el que te vas a registrar, el email y la contraseña. Luego veremos que también será necesario generar un token para utilizar GIT en tu PC o en las PCs de la Universidad. Te dejamos un video de una clase donde vimos el paso a paso sobre como registrarse y usar GIT.
@@ -19,11 +19,11 @@ videos:
   
 conferencia:
   horario1: <br>
-            - (***Lunes 7 de Agosto***) -> **PRESENCIAL** a parir de las 08.00hs. - Laboratorio 3 en 1er piso edificio Malvinas Argentinas (Origone 101) - Lucas Spigariol <br>
+            - (***Lunes 7 de Agosto***) -> **PRESENCIAL** a parir de las 08.00hs. - Laboratorio a confirmar en 1er piso edificio Malvinas Argentinas (Origone 101) - Lucas Spigariol <br>
             - (***Jueves 10 de Agosto***) -> **VIRTUAL** a parir de las 18.00hs. - Link -> [**Link**](https://meet.google.com/jkq-pvcy-nfh)
   
   horario0: <br>
-            - (***Martes 8 de Agosto***) -> **PRESENCIAL** a partir de las 18.00hs. - Laboratorio 3 en 1er piso edificio Malvinas Argentinas (Origone 101) - Profesor Gerardo Gonzalez Tulian <br>
+            - (***Martes 8 de Agosto***) -> **PRESENCIAL** a partir de las 18.00hs. - Laboratorio a confirmar en 1er piso edificio Malvinas Argentinas (Origone 101) - Profesor Gerardo Gonzalez Tulian <br>
             - (***Jueves 10 de Agosto***) -> **VIRTUAL** a parir de las 18.00hs. - Link -> [**Link**](https://meet.google.com/jkq-pvcy-nfh)
 
   
