--- a/_data/cursada_actual/01.yml
+++ b/_data/cursada_actual/01.yml
@@ -14,7 +14,7 @@ videos:
     url: https://youtu.be/aAfjr8-1-0Y
   - nombre: Primeros pasos con GIT. Grabación de la clase del 13 de agosto'22 dictada por Hernan Coniglio, con la colaboración de Matias Müller, Valentino Chiappanni y Lucas Bonadeo
     url: https://youtu.be/jTuVrHznu2g
-  - nombre: Video clase virtual jueves 10/8/23 **(Nuevo)**
+  - nombre: Video clase virtual jueves 10/8/23
     url: https://youtu.be/DfKZ9F-iW8E
   
 conferencia:
