--- a/_data/cursada_actual/02.yml
+++ b/_data/cursada_actual/02.yml
@@ -23,7 +23,7 @@ videos:
     url: https://youtu.be/_JSncjztLAY
   - nombre: Ejercicio "Gustos" - comentarios para encararlo
     url: https://youtu.be/dRy92EB4ppM
-  - nombre: Grabación pantalla y audio ambiente de clase presencial jueves 17/8/23 **(Nuevo)**
+  - nombre: Grabación pantalla y audio ambiente de clase presencial jueves 17/8/23
     url: https://youtu.be/KVH7AmvR3qE
 
 
