--- a/_data/cursada_actual/03.yml
+++ b/_data/cursada_actual/03.yml
@@ -18,7 +18,8 @@ videos:
     url: https://youtu.be/7QRWdouBcsY
   - nombre: Introducción a los tests automáticos
     url: https://youtu.be/1BNEa7ma5cA
-
+  - nombre: Video clase virtual jueves 24/8/23 **(Nuevo)**
+    url: https://youtu.be/MOy72cH9zIc
 
 
 conferencia:
@@ -46,7 +47,7 @@ ejercicios:
 mumuki:
   - nombre: Atributos 
     url: https://mumuki.io/unahur-obj1/lessons/499-objetos-y-mensajes-atributos
-    ejercicios: Todos. Deberán resolverlos en el IDE de Wollok y luego pueden copiar ese código a Mumuki dentro del área "Solución" para correr los tests automáticos pulsando el botón "Enviar"
+    ejercicios: Todos. Deberán resolverlos en el IDE de Wollok
   - nombre: Personas y barrios - qué anda, qué no, cuánto da
     url: https://mumuki.io/unahur-obj1/lessons/482-objetos-y-mensajes-personas-y-barrios-que-anda-que-no-cuanto-da
     ejercicios: Todos. No requieren que los resuelvan en el IDE de Wollok, ya que son multile choice y tienen test automático en Mumuki
