--- a/_data/cursada_actual/03.yml
+++ b/_data/cursada_actual/03.yml
@@ -18,7 +18,7 @@ videos:
     url: https://youtu.be/7QRWdouBcsY
   - nombre: Introducción a los tests automáticos
     url: https://youtu.be/1BNEa7ma5cA
-  - nombre: Video clase virtual jueves 24/8/23 **(Nuevo)**
+  - nombre: Video clase virtual jueves 24/8/23
     url: https://youtu.be/MOy72cH9zIc
 
 
