corrección texto semana 4

--- a/_data/cursada_actual/04.yml
+++ b/_data/cursada_actual/04.yml
@@ -2,7 +2,7 @@ descripcion: |
   Esta semana seguimos trabajando los conceptos que ya vimos, profundizando en el tema test automáticos, y seguimos jugando con  Wollok Game. 
   Les dejamos 2 videos cortos introductorios sobre Game para que los vean antes de la clase práctica del jueves.
 
-  Por otro lado, debemos ir armando los grupos que deberán conformar para la realización y entrega de los trabajos prácticos que iremos presentando a partir de la próxima semana. El enunciado ya lo tienen disponible y se llama "Personajes Frutas y Juegos". Antes de aceptar la asignación, leer las instrucciones ya que deben tener definido previamente los grupos. <br>
+  Por otro lado, debemos ir armando los grupos que deberán conformar para la realización y entrega de los trabajos prácticos. El primer enunciado ya lo tienen disponible y se llama "Personajes Frutas y Juegos", y tiene fecha límite de entrega 10/9/23. Antes de aceptar la asignación, leer las instrucciones ya que deben tener definido previamente los grupos. <br>
   Dejamos el siguiente [**formulario**](https://forms.gle/EN1Bx8DiB1U5yCyW6) para que solamente uno/a de los integrantes del grupo lo complete, donde irán a definir un nombre de grupo, a qué comision pertenecen los/as integrantes, los apellidos y nombres de cada integrante del grupo y usuario de github. **No** se pueden mezclar alumnos/as de diferentes comisiones y los grupos pueden ser de hasta 6 personas.<br>
   Cualquier duda nos consultan por el canal de Discord.
 
