cambio clase martes 5-9 a virtual

--- a/_data/cursada_actual/05.yml
+++ b/_data/cursada_actual/05.yml
@@ -35,7 +35,7 @@ conferencia:
             - (***Jueves 7 de Septiembre***) -> **VIRTUAL** a parir de las 18.00hs. - Link -> [**Link**](https://meet.google.com/dbv-mcay-wki)
   
   horario0: <br>
-            - (***Martes 5 de Septiembre***) -> **PRESENCIAL** a partir de las 18.00hs. - Laboratorio MA-109 en 1er piso edificio Malvinas Argentinas (Origone 101) - Profesor Gerardo Gonzalez Tulian <br>
+            - (***Martes 5 de Septiembre***) -> **VIRTUAL** a parir de las 18.15hs. - Link -> [**Link**](https://meet.google.com/dbv-mcay-wki) <br>
             - (***Jueves 7 de Septiembre***) -> **VIRTUAL** a parir de las 18.00hs. - Link -> [**Link**](https://meet.google.com/dbv-mcay-wki)
 
 
