se sube video clase virtual martes 5-9-23

--- a/_data/cursada_actual/05.yml
+++ b/_data/cursada_actual/05.yml
@@ -27,7 +27,8 @@ videos:
     url: https://youtu.be/hX8PMSeryMA
   - nombre: Conjuntos
     url: https://youtu.be/vLSs5-OYRIU
-
+  - nombre: Video clase virtual martes 5/9/23 **(Nuevo)**
+    url: https://youtu.be/tzbaUjhMjr4
 
 conferencia:
   horario1: <br>
