--- a/_data/cursada_actual/05.yml
+++ b/_data/cursada_actual/05.yml
@@ -27,8 +27,10 @@ videos:
     url: https://youtu.be/hX8PMSeryMA
   - nombre: Conjuntos
     url: https://youtu.be/vLSs5-OYRIU
-  - nombre: Video clase virtual martes 5/9/23 **(Nuevo)**
+  - nombre: Video clase virtual martes 5/9/23
     url: https://youtu.be/tzbaUjhMjr4
+  - nombre: Video clase virtual jueves 7/9/23 **(Nuevo)**
+    url: https://youtu.be/5xfJ-JEHbF4
 
 conferencia:
   horario1: <br>
