--- a/_data/cursada_actual/05.yml
+++ b/_data/cursada_actual/05.yml
@@ -29,7 +29,7 @@ videos:
     url: https://youtu.be/vLSs5-OYRIU
   - nombre: Video clase virtual martes 5/9/23
     url: https://youtu.be/tzbaUjhMjr4
-  - nombre: Video clase virtual jueves 7/9/23 **(Nuevo)**
+  - nombre: Video clase virtual jueves 7/9/23
     url: https://youtu.be/5xfJ-JEHbF4
 
 conferencia:
