--- a/_data/cursada_actual/06.yml
+++ b/_data/cursada_actual/06.yml
@@ -17,6 +17,8 @@ videos:
     url: https://youtu.be/okf2VCfjvx4
   - nombre: Pensar en los tipos para elegir qué operación me resuelve un recorrido.
     url: https://youtu.be/cLfp2T_LSjg
+  - nombre: Grabación clase presencial del día 14/9/23 **(Nuevo)**
+    url: https://youtu.be/9rDdnwHZjl0
 
 
 conferencia:
