semana 7 a confirmar modalidad conferencia día martes y aula clase practica jueves a la mañana

--- a/_data/cursada_actual/06.yml
+++ b/_data/cursada_actual/06.yml
@@ -17,7 +17,7 @@ videos:
     url: https://youtu.be/okf2VCfjvx4
   - nombre: Pensar en los tipos para elegir qué operación me resuelve un recorrido.
     url: https://youtu.be/cLfp2T_LSjg
-  - nombre: Grabación clase presencial del día 14/9/23 **(Nuevo)**
+  - nombre: Grabación clase presencial del día 14/9/23
     url: https://youtu.be/9rDdnwHZjl0
 
 
