--- a/_data/cursada_actual/07.yml
+++ b/_data/cursada_actual/07.yml
@@ -37,7 +37,7 @@ conferencia:
             - (***Jueves 21 de Septiembre***) -> **PRESENCIAL** a partir de las 08.00hs. - **AULA A CONFIRMAR** - Profesor Lucas Spigariol <br>
   
   horario0: <br>
-            - (***Martes 19 de Septiembre***) -> **(A CONFIRMAR)** <br>
+            - (***Martes 19 de Septiembre***) -> **PRESENCIAL** a partir de las 18.15hs. - Laboratorio MA-109 en 1er piso edificio Malvinas Argentinas (Origone 101) - Profesor Gerardo Gonzalez Tulian <br>
             - (***Jueves 21 de Septiembre***) -> **VIRTUAL** a parir de las 18.00hs. - Link -> [**Link**](https://meet.google.com/dbv-mcay-wki)
 
 ejercicios:
