--- a/_data/cursada_actual/07.yml
+++ b/_data/cursada_actual/07.yml
@@ -29,7 +29,8 @@ videos:
     url: https://youtu.be/0pggtvrIXYY
   - nombre: clases - cómo es el self ahora que tenemos clases
     url: https://youtu.be/I6bOjRAr3Wo
-
+  - nombre: Video clase virtual jueves 21/9/23 **(Nuevo)**
+    url: https://youtu.be/vtcr3OZOcXA
 
 conferencia:
   horario1: <br>
