--- a/_data/cursada_actual/08.yml
+++ b/_data/cursada_actual/08.yml
@@ -4,7 +4,8 @@ descripcion: |
   Algunos de los videos de cuatrimestres anteriores son para seguir pensando y trabajando los conceptos que vimos, y cómo aplicarlos a resolver distintas situaciones. En particular, en uno se resuelve la parte de bultos de la entrega de camión de transporte, que es un caso en el que hay que agregar métodos en objetos que ya vienen definidos de partes anteriores de la consigna.  
   Los otros dos son de dos características del lenguaje que sirven para poder "escribir más corto" algunas cosas.
 
-  **Atención que esta semana hay nuevo ejercicio con Entrega**. Se llama _**Depósito de Bicicletas**_ y es un ejercicio para resolver de forma individual. Está pensado especialmente para que vean como vienen hasta acá con la materia. Deberían poder resolverlo al menos hasta la parte de Desafíos. Luego de que entreguen (push sobre cada repo y tiene fecha límite), se les hará una devolución directamente en su repo de github.
+  **Atención que esta semana hay nuevo ejercicio con Entrega**. <br> 
+  Se llama _**Depósito de Bicicletas**_ y es un ejercicio para resolver de forma individual. Está pensado especialmente para que se pueda evaluar como vienen hasta acá con la materia. Deberían poder resolverlo al menos hasta la parte de Desafíos. Luego de que entreguen (push sobre cada repo, tiene fecha límite ojo), se les hará una **devolución con nota numérica** directamente en su repo de github, que **se promediará con la nota del TP Grupal Final**.
  
   
 videos:
