--- a/_data/cursada_actual/09.yml
+++ b/_data/cursada_actual/09.yml
@@ -17,7 +17,8 @@ videos:
     url: https://youtu.be/akiTj8ZZhPU
   - nombre: Nueva Instancia dentro de una expresión
     url: https://youtu.be/01ewdTUk658
-
+  - nombre: Grabación clase virtual del jueves 5/10/2023 **(Nuevo)**
+    url: https://youtu.be/QMC1FV4jWVE
 
 conferencia:
   horario1: <br>
