cambio clase martes 10/10 a virtual

--- a/_data/cursada_actual/10.yml
+++ b/_data/cursada_actual/10.yml
@@ -24,7 +24,7 @@ conferencia:
             - (***Jueves 12 de Octubre***) -> **PRESENCIAL/VIRTUAL** a partir de las 18.00hs. - Laboratorio MA-109 en 1er piso edificio Malvinas Argentinas (Origone 101) - Virtual -> [**Link**](https://meet.google.com/dbv-mcay-wki) - Hernán Coniglio <br>
   
   horario0: <br>
-            - (***Martes 10 de Octubre***) -> **PRESENCIAL** a partir de las 18.15hs. - Laboratorio MA-109 en 1er piso edificio Malvinas Argentinas (Origone 101) - Profesor Gerardo Gonzalez Tulian <br>
+            - (***Martes 10 de Octubre***) -> **VIRTUAL** a parir de las 18.00hs. - Link -> [**Link**](https://meet.google.com/dbv-mcay-wki) - Profesor Gerardo Gonzalez Tulian <br>
             - (***Jueves 12 de Octubre***) -> **PRESENCIAL** a partir de las 18.00hs. - Laboratorio MA-109 en 1er piso edificio Malvinas Argentinas (Origone 101) - Hernán Coniglio <br>
 
 
