--- a/_data/cursada_actual/10.yml
+++ b/_data/cursada_actual/10.yml
@@ -16,6 +16,8 @@ videos:
     url: https://youtu.be/fFf9Kxu9PWs
   - nombre: Herencia - Naves Espaciales Parte IV
     url: https://youtu.be/FDhPs8Gqsz8
+  - nombre: Grabación clase presencial jueves 12 de Octubre **(Nuevo)**
+    url: https://youtu.be/ohd5RPK4ulQ
   
 
 conferencia:
