--- a/_data/cursada_actual/03.yml
+++ b/_data/cursada_actual/03.yml
@@ -25,11 +25,11 @@ videos:
 conferencia:
   horario1: <br>
             - (***Lunes 21 de Agosto***) -> **FERIADO NO HAY CLASES** <br>
-            - (***Jueves 24 de Agosto***) -> **Clase VIRTUAL** a parir de las 18.00hs. - Link -> [**Link**](https://meet.google.com/dbv-mcay-wki) <br>
+            - (***Jueves 24 de Agosto***) -> **Clase VIRTUAL** a partir de las 18.00hs. - Link -> [**Link**](https://meet.google.com/dbv-mcay-wki) <br>
   
   horario0: <br>
             - (***Martes 22 de Agosto***) -> **PRESENCIAL** a partir de las 18.15hs. - Laboratorio MA-109 en 1er piso edificio Malvinas Argentinas (Origone 101) - Profesor Gerardo Gonzalez Tulian <br>
-            - (***Jueves 24 de Agosto***) -> **Clase VIRTUAL** a parir de las 18.00hs. - Link -> [**Link**](https://meet.google.com/dbv-mcay-wki) <br>
+            - (***Jueves 24 de Agosto***) -> **Clase VIRTUAL** a partir de las 18.00hs. - Link -> [**Link**](https://meet.google.com/dbv-mcay-wki) <br>
 
 
 
