--- a/_data/cursada_actual/04.yml
+++ b/_data/cursada_actual/04.yml
@@ -22,7 +22,7 @@ videos:
 
 conferencia:
   horario1: <br>
-            - (***Lunes 28 de Agosto***) -> **PRESENCIAL** a parir de las 08.00hs. - Laboratorio MA-113 en 1er piso edificio Malvinas Argentinas (Origone 101) - Lucas Spigariol <br>
+            - (***Lunes 28 de Agosto***) -> **PRESENCIAL** a partir de las 08.00hs. - Laboratorio MA-113 en 1er piso edificio Malvinas Argentinas (Origone 101) - Lucas Spigariol <br>
             - (***Jueves 31 de Agosto***) -> **PRESENCIAL/VIRTUAL** a partir de las 18.00hs. - Laboratorio MA-109 en 1er piso edificio Malvinas Argentinas (Origone 101) - Virtual -> [**Link**](https://meet.google.com/dbv-mcay-wki) - Hernán Coniglio <br>
   
   horario0: <br>
