--- a/_data/cursada_actual/05.yml
+++ b/_data/cursada_actual/05.yml
@@ -34,12 +34,12 @@ videos:
 
 conferencia:
   horario1: <br>
-            - (***Lunes 4 de Septiembre***) -> **PRESENCIAL** a parir de las 08.00hs. - Laboratorio MA-113 en 1er piso edificio Malvinas Argentinas (Origone 101) - Lucas Spigariol <br>
-            - (***Jueves 7 de Septiembre***) -> **VIRTUAL** a parir de las 18.00hs. - Link -> [**Link**](https://meet.google.com/dbv-mcay-wki)
+            - (***Lunes 4 de Septiembre***) -> **PRESENCIAL** a partir de las 08.00hs. - Laboratorio MA-113 en 1er piso edificio Malvinas Argentinas (Origone 101) - Lucas Spigariol <br>
+            - (***Jueves 7 de Septiembre***) -> **VIRTUAL** a partir de las 18.00hs. - Link -> [**Link**](https://meet.google.com/dbv-mcay-wki)
   
   horario0: <br>
-            - (***Martes 5 de Septiembre***) -> **VIRTUAL** a parir de las 18.15hs. - Link -> [**Link**](https://meet.google.com/dbv-mcay-wki) <br>
-            - (***Jueves 7 de Septiembre***) -> **VIRTUAL** a parir de las 18.00hs. - Link -> [**Link**](https://meet.google.com/dbv-mcay-wki)
+            - (***Martes 5 de Septiembre***) -> **VIRTUAL** a partir de las 18.15hs. - Link -> [**Link**](https://meet.google.com/dbv-mcay-wki) <br>
+            - (***Jueves 7 de Septiembre***) -> **VIRTUAL** a partir de las 18.00hs. - Link -> [**Link**](https://meet.google.com/dbv-mcay-wki)
 
 
 ejercicios:
