--- a/_data/cursada_actual/07.yml
+++ b/_data/cursada_actual/07.yml
@@ -34,12 +34,12 @@ videos:
 
 conferencia:
   horario1: <br>
-            - (***Lunes 18 de Septiembre***) -> **PRESENCIAL** a parir de las 08.00hs. - Laboratorio MA-113 en 1er piso edificio Malvinas Argentinas (Origone 101) - Profesor Lucas Spigariol <br>
+            - (***Lunes 18 de Septiembre***) -> **PRESENCIAL** a partir de las 08.00hs. - Laboratorio MA-113 en 1er piso edificio Malvinas Argentinas (Origone 101) - Profesor Lucas Spigariol <br>
             - (***Jueves 21 de Septiembre***) -> **PRESENCIAL** a partir de las 08.00hs. - Laboratorio MA-112 en 1er piso edificio Malvinas Argentinas (Origone 101) - Profesor Lucas Spigariol <br>
   
   horario0: <br>
             - (***Martes 19 de Septiembre***) -> **PRESENCIAL** a partir de las 18.15hs. - Laboratorio MA-109 en 1er piso edificio Malvinas Argentinas (Origone 101) - Profesor Gerardo Gonzalez Tulian <br>
-            - (***Jueves 21 de Septiembre***) -> **VIRTUAL** a parir de las 18.00hs. - Link -> [**Link**](https://meet.google.com/dbv-mcay-wki)
+            - (***Jueves 21 de Septiembre***) -> **VIRTUAL** a partir de las 18.00hs. - Link -> [**Link**](https://meet.google.com/dbv-mcay-wki)
 
 ejercicios:
 
