--- a/_data/cursada_actual/08.yml
+++ b/_data/cursada_actual/08.yml
@@ -21,7 +21,7 @@ videos:
 
 conferencia:
   horario1: <br>
-            - (***Lunes 25 de Septiembre***) -> **PRESENCIAL** a parir de las 08.00hs. - Laboratorio MA-113 en 1er piso edificio Malvinas Argentinas (Origone 101) - Lucas Spigariol <br>
+            - (***Lunes 25 de Septiembre***) -> **PRESENCIAL** a partir de las 08.00hs. - Laboratorio MA-113 en 1er piso edificio Malvinas Argentinas (Origone 101) - Lucas Spigariol <br>
             - (***Jueves 28 de Septiembre***) -> **PRESENCIAL/VIRTUAL** a partir de las 18.00hs. - Laboratorio MA-109 en 1er piso edificio Malvinas Argentinas (Origone 101) - Virtual -> [**Link**](https://meet.google.com/dbv-mcay-wki) - Hernán Coniglio <br>
   
   horario0: <br>
