--- a/_data/cursada_actual/09.yml
+++ b/_data/cursada_actual/09.yml
@@ -22,12 +22,12 @@ videos:
 
 conferencia:
   horario1: <br>
-            - (***Lunes 2 de Octubre***) -> **PRESENCIAL** a parir de las 08.00hs. - Laboratorio MA-113 en 1er piso edificio Malvinas Argentinas (Origone 101) - Profesor Lucas Spigariol <br>
-            - (***Jueves 5 de Octubre***) -> **VIRTUAL** a parir de las 18.00hs. - Link -> [**Link**](https://meet.google.com/dbv-mcay-wki)
+            - (***Lunes 2 de Octubre***) -> **PRESENCIAL** a partir de las 08.00hs. - Laboratorio MA-113 en 1er piso edificio Malvinas Argentinas (Origone 101) - Profesor Lucas Spigariol <br>
+            - (***Jueves 5 de Octubre***) -> **VIRTUAL** a partir de las 18.00hs. - Link -> [**Link**](https://meet.google.com/dbv-mcay-wki)
   
   horario0: <br>
             - (***Martes 3 de Octubre***) -> **PRESENCIAL** a partir de las 18.15hs. - Laboratorio MA-109 en 1er piso edificio Malvinas Argentinas (Origone 101) - Profesor Gerardo Gonzalez Tulian <br>
-            - (***Jueves 5 de Octubre***) -> **VIRTUAL** a parir de las 18.00hs. - Link -> [**Link**](https://meet.google.com/dbv-mcay-wki)
+            - (***Jueves 5 de Octubre***) -> **VIRTUAL** a partir de las 18.00hs. - Link -> [**Link**](https://meet.google.com/dbv-mcay-wki)
 
 
 ejercicios:
