--- a/_data/cursada_actual/10.yml
+++ b/_data/cursada_actual/10.yml
@@ -16,7 +16,7 @@ videos:
     url: https://youtu.be/fFf9Kxu9PWs
   - nombre: Herencia - Naves Espaciales Parte IV
     url: https://youtu.be/FDhPs8Gqsz8
-  - nombre: Grabación clase presencial jueves 12 de Octubre **(Nuevo)**
+  - nombre: Grabación clase presencial jueves 12 de Octubre
     url: https://youtu.be/ohd5RPK4ulQ
   
 
