--- a/_data/cursada_actual/11.yml
+++ b/_data/cursada_actual/11.yml
@@ -19,6 +19,8 @@ videos:
     url: https://youtu.be/0CI01a77_K0
   - nombre: Lo mismo aplicado a una consulta (en lugar de indicación) -  Naves Espaciales Parte VII
     url: https://youtu.be/8Bzgo8Kr0ro
+  - nombre: Grabación clase presencial jueves 19 de Octubre **(Nuevo)**
+    url: https://youtu.be/yRp5NypADew
 
 
 conferencia:
