--- a/_data/cursada_actual/12.yml
+++ b/_data/cursada_actual/12.yml
@@ -9,7 +9,7 @@ conferencia:
             - (***Jueves 26 de Octubre***) -> **PRESENCIAL/VIRTUAL** a partir de las 18.00hs. - Laboratorio MA-109 en 1er piso edificio Malvinas Argentinas (Origone 101) - Virtual -> [**Link**](https://meet.google.com/dbv-mcay-wki) - Hernán Coniglio <br>
   
   horario0: <br>
-            - (***Martes 24 de Octubre***) -> **VIRTUAL** a partir de las 18.00hs. - Link -> [**Link**](https://meet.google.com/dbv-mcay-wki) - Profesor Gerardo Gonzalez Tulian <br>
+            - (***Martes 24 de Octubre***) -> **PRESENCIAL** a partir de las 18.15hs. - Laboratorio MA-109 en 1er piso edificio Malvinas Argentinas (Origone 101) - Profesor Gerardo Gonzalez Tulian <br>
             - (***Jueves 26 de Octubre***) -> **PRESENCIAL** a partir de las 18.00hs. - Laboratorio MA-109 en 1er piso edificio Malvinas Argentinas (Origone 101) - Hernán Coniglio <br>
 
 ejercicios:
