--- a/_data/cursada_actual/12.yml
+++ b/_data/cursada_actual/12.yml
@@ -2,7 +2,12 @@ descripcion: |
   Esta semana es para practicar fuerte para el parcial, que será los días 30/10 para turno mañana y 31/10 para turno noche. <br>
   Les estamos dejando 2 ejercicios para que resuelvan en forma individual. Recuerden la recomendación de tomarse el tiempo de leer primero muy bien todo el dominio del problema y luego ir resolviendo por etapas, identificando bien donde es realmente necesario definir atributos o se debe resolver mediante métodos. Y atención con indicar como "property" todos los atributos, porque puede ser un error dejar declarado un setter y/o getter que no correstponda. <br> 
   Aprovechen el canal de Discord para enviar sus consultas que siempre encontrarán compañeros/as, profes y colaboradores/as dispuestos/as a ayudar y evacuar dudas. <br>
- 
+
+videos:
+  - nombre: Grabación clase presencial jueves 26 de Octubre **(Nuevo)**
+    url: https://youtu.be/_zpF7pH9IeQ
+  
+
 conferencia:
   horario1: <br>
             - (***Lunes 23 de Octubre***) -> **PRESENCIAL** a partir de las 08.00hs. - Laboratorio MA-113 en 1er piso edificio Malvinas Argentinas (Origone 101) - Lucas Spigariol <br>
