cambio fecha parcial turno mañana

--- a/_data/cursada_actual/13.yml
+++ b/_data/cursada_actual/13.yml
@@ -1,11 +1,11 @@
 descripcion: |
-  **Información Importante sobre los Parciales**
-  
-  **El Parcial será PRESENCIAL el día y horario de cursada de cada comisión**.
-  
-  **Turno Mañana Lunes 30/10 08:00hs. - Laboratorio MA-113 (1er Piso Edif Malvinas)** - Prof. Lucas Spigariol
-  
-  **Turno Noche Martes 31/10 18:00hs. - Laboratorio MA-109 (1er Piso Edif Malvinas)** - Prof. Gerardo Gonzalez Tulian
+  **¡¡INFORMACIÓN DE ÚLTIMO MOMENTO!!**
+
+  **EL PARCIAL DE TURNO MAÑANA SE REPROGRAMA AL DÍA 6/11/23** <br>
+  **Lunes 30/10/23 habrá clase virtual 8:00hs en el [Link](https://meet.google.com/dbv-mcay-wki)**
+  <br>  <br>  <br>
+  **TURNO NOCHE POR AHORA SE MANTIENE LA FECHA Y HORARIO** <br>
+  **PARCIAL T.Noche Martes 31/10 18:00hs. - Laboratorio MA-109 (1er Piso Edif Malvinas)** - Prof. Gerardo Gonzalez Tulian
   
   Los que puedan y deseen llevar sus notebooks para poder trabajar en ellas pueden hacerlo; consideren llevar también adaptador de red, cable ethernet, y los accesorios que requieran para conectarse, teniendo en cuenta que no habrá red Wifi disponible. 
   
@@ -16,7 +16,7 @@ descripcion: |
 
 conferencia:
   horario1: <br>
-            - (***Lunes 30 de Octubre***) -> **PARCIAL PRESENCIAL** a parir de las 08.00hs. - Laboratorio 3 en 1er piso edificio Malvinas Argentinas (Origone 101) - Prof Lucas Spigariol <br>
+            - (***Lunes 30 de Octubre***) -> **CLASE VIRTUAL** a partir de las 8.00hs. - Link -> [**Link**](https://meet.google.com/dbv-mcay-wki) Prof Lucas Spigariol <br>
             - (***Jueves 2 de Noviembre***) -> **VIRTUAL** a partir de las 18.00hs. - Link -> [**Link**](https://meet.google.com/dbv-mcay-wki)
   
   horario0: <br>
