--- a/_data/cursada_actual/15.yml
+++ b/_data/cursada_actual/15.yml
@@ -10,7 +10,7 @@ descripcion: |
   Laboratorio MA-109 en 1er piso edificio Malvinas Argentinas (Origone 101) <br>
   Quienes tengan algún inconveniente con el día y horario deben ponerse en contacto a través de Discord con el profesor Lucas Spigariol antes del día 14/11.<br>
 
-  #### Jueves 16 de Noviembre 18:00hs PRESENCIAL/HIBRIDA
+  #### Jueves 16 de Noviembre 18:00hs PRESENCIAL
   - **Re-Entrega TP Game Grupal**<br>
   Laboratorio MA-109 en 1er piso edificio Malvinas Argentinas (Origone 101)
   <br><br>
